--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="rendered_char_bg">#800000ff</color>
     <color name="grid_color">#800000ff</color>
     <color name="pointer_color">#aff00000</color>
+    <color name="text_color">#FF4336</color>
 
 </resources>
