--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="anim_view_width">250dp</dimen>
     <dimen name="anim_view_height">250dp</dimen>
+
+    <dimen name="animateNotationTextSize">25sp</dimen>
 </resources>
