moved view set background color to xml to see if it would work.  It did. play with text colors.

--- a/app/src/main/res/layout/animator_view.xml
+++ b/app/src/main/res/layout/animator_view.xml
@@ -32,6 +32,7 @@
         	android:id="@+id/animator_view"
 			android:layout_width="@dimen/anim_view_width"
 			android:layout_height="@dimen/anim_view_height"
+			android:background="@color/animate_bg"
 		/>
     	
     </FrameLayout>
