--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="rendered_char_bg">#800000ff</color>
     <color name="grid_color">#800000ff</color>
     <color name="pointer_color">#aff00000</color>
-    <color name="text_color">#FF4336</color>
+    <color name="text_color">#00BCD4</color>
     <color name="text_bg_color">#FFFFFFFF</color>
 
     <color name="animate_bg">#FFFFF0</color>
