--- a/app/src/main/res/layout/animator_view.xml
+++ b/app/src/main/res/layout/animator_view.xml
@@ -14,12 +14,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:background="#08ffffff"
-	android:id="@+id/animate_layout"
-	>
+	android:id="@+id/animate_layout">
 
     <FrameLayout
     	android:layout_width="wrap_content"
@@ -32,6 +33,7 @@
         	android:id="@+id/animator_view"
 			android:layout_width="200dp"
 			android:layout_height="200dp"
+			app:text_size="12sp"
 			android:background="@color/animate_bg"
 		/>
     	
