Set annotation text size and stroke width in xml.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -24,5 +24,6 @@
     -->
     <declare-styleable name="AnimatorView">
         <attr name="text_size" format="string" />
+        <attr name="animate_stroke_width" format="string" />
     </declare-styleable>
 </resources>
