--- a/app/src/main/res/layout/animator_view.xml
+++ b/app/src/main/res/layout/animator_view.xml
@@ -33,7 +33,8 @@
         	android:id="@+id/animator_view"
 			android:layout_width="200dp"
 			android:layout_height="200dp"
-			app:text_size="12sp"
+			app:text_size="20sp"
+			app:animate_stroke_width="8dp"
 			android:background="@color/animate_bg"
 		/>
     	
